<resources>
    <string name="app_name">Hey Eddie</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="connection_not_possible">Configure Connection</string>
    <string name="connection_checking">Checking Connection</string>
    <string name="connection_establish">Connect</string>
    <string name="connection_disconnect">Disconnect</string>
    <string name="publish_message">Publish Message</string>
    <string name="message_history">Message History</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="topic">Topic</string>
    <string name="max_qos">Max QoS</string>
    <string name="message_type">Message Type</string>
    <string name="delete_history">Delete History</string>
    <string name="retain">Retain</string>
    <string name="payload">Payload</string>

    <string name="status_unconfigured">Unconfigured</string>
    <string name="status_checking">Checking</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_disconnecting">Disconnecting</string>
    <string name="status_connected">Connected</string>
    <string name="status_connecting">Connecting</string>

    <string name="title_connection_config">Configure Connection</string>
    <string name="title_message_history">Message History</string>
    <string name="title_subscriptions">Subscriptions</string>
    <string name="title_publish">Publish</string>
    <string name="received_messages">Received Messages</string>
    <string name="published_messages">Published Messages</string>
    <string name="at">at</string>

</resources>
