<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_item_connection"
        android:icon="@drawable/ic_sync_problem"
        android:title="@string/connection_not_possible" />
    <group
        android:id="@+id/menu_group_connected"
        android:visible="false">

        <item
            android:id="@+id/menu_item_publish"
            android:icon="@drawable/ic_publish"
            android:title="@string/publish_message" />

        <item
            android:id="@+id/menu_item_subscriptions"
            android:icon="@drawable/ic_list"
            android:title="@string/subscriptions" />

    </group>
    <item
        android:id="@+id/menu_item_history"
        android:icon="@drawable/ic_history"
        android:title="@string/message_history" />
    <item
        android:id="@+id/menu_item_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>