<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_subscription_topic_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/topic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_subscription_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/new_subscription_max_qos_label"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/max_qos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_subscription_topic_label" />

    <Spinner
        android:id="@+id/new_subscription_max_qos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/new_subscription_max_qos_label"
        app:layout_constraintStart_toEndOf="@+id/new_subscription_max_qos_label"
        app:layout_constraintTop_toTopOf="@+id/new_subscription_max_qos_label"/>

    <TextView
        android:id="@+id/new_subscription_message_type_label"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_type"
        app:layout_constraintBottom_toBottomOf="@+id/new_subscription_max_qos_label"
        app:layout_constraintStart_toEndOf="@+id/new_subscription_max_qos"
        app:layout_constraintTop_toTopOf="@+id/new_subscription_max_qos_label" />

    <Spinner
        android:id="@+id/new_subscription_message_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/new_subscription_message_type_label"
        app:layout_constraintStart_toEndOf="@+id/new_subscription_message_type_label"
        app:layout_constraintTop_toTopOf="@+id/new_subscription_message_type_label" />

</android.support.constraint.ConstraintLayout>